@@ -483,6 +483,10 @@ Extension Modules
 Library
 -------
 
+- Queue.Queue objects now support .task_done() and .join() methods
+  to make it easier to monitor when daemon threads have completed
+  processing all enqueued tasks.  Patch #1455676.
+
 - popen2.Popen objects now preserve the command in a .cmd attribute.
 
 - Added the ctypes ffi package.
